--- a/build.gradle
+++ b/build.gradle
@@ -23,13 +23,14 @@ jar {
 
 repositories {
     jcenter()
+    mavenLocal()
     maven {
         url 'https://dl.bintray.com/daves125125/maven-repo/'
     }
 }
 
 dependencies {
-    compile 'com.djh.sampleit:SampleItCore:1.0'
+    compile 'com.djh.sampleit:SampleItCore:1.1.0'
 
     compile 'com.github.dblock:oshi-core:1.5.1'
     compile 'org.springframework.boot:spring-boot-starter-web:1.3.0.RELEASE'
